<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragMenu"
    android:padding="4mm"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_panel"
        android:textColor="@color/brown_button"
        android:gravity="center"
        android:textSize="5mm"
        android:textStyle="bold"/>

<LinearLayout
    android:layout_weight="1"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_BTN_userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_info"
        android:textColor="@color/white"
        android:background="@color/brown_button"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_BTN_cusInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_info"
        android:textColor="@color/white"
        android:background="@color/brown_button"/>

    <ProgressBar
        android:id="@+id/prog"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_BTN_logout"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:background="@color/brown_button"/>

</LinearLayout>