<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragUserInformation"
    android:orientation="vertical"
    android:padding="4mm">

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Private Information"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <TextView
        android:layout_weight="1"
        android:id="@+id/uInfo_LBL_insertedName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NOT_INSERTED"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"/>

     <TextView
         android:layout_weight="1"
         android:id="@+id/uInfo_LBL_insertedPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/NOT_INSERTED"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission"/>

    <TextView
        android:id="@+id/uInfo_LBL_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NO_PERMISSIONS"/>

    </LinearLayout>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uInfo_EDT_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uInfo_EDT_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/uInfo_BTN_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/white"
            android:background="@color/brown_button"/>

    </LinearLayout>

</LinearLayout>